# synthex-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: python-publish.yml
synthex/: __init__.py  api_client.py  client.py  config.py  consts.py  credits_api.py  decorators.py  endpoint.py  exceptions.py  jobs_api.py  users_api.py
synthex/models/: __init__.py  credits.py  jobs.py  responses.py  users.py
tests/: conftest.py  test_client.py
tests/integration/: test_base.py  test_base_int.py  test_credits.py  test_credits_int.py  test_jobs.py  test_ping.py  test_synthex.py  test_users.py  test_users_int.py
tests/integration/jobs/: test_generate_data_int.py  test_list_jobs_int.py
tests/unit/: test_base.py  test_base_unit.py  test_client.py  test_credits.py  test_credits_unit.py  test_jobs.py  test_synthex.py  test_users.py  test_users_unit.py
tests/unit/base/: test_synthex_instantiation_unit.py
tests/unit/jobs/: test_generate_data_unit.py  test_list_jobs_unit.py
