[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthex"
version = "0.1.0"
description = "Synthex python library - developed by Tanaos"
authors = [
    { name = "Riccardo Lucato", email = "riccardo@tanaos.com" },
    { name = "Saurabh Pradhan" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.32.3",
    "responses>=0.25.7",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.2",
]

[project.urls]
homepage = "https://github.com/tanaos/synthex-python"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["synthex*"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]