[build-system]
requires = ["setuptools>=61", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthex"
dynamic = ["version"]
description = "Generate high-quality, large-scale synthetic datasets 📊🧪"
authors = [
    { name = "Riccardo Lucato", email = "riccardo@tanaos.com" },
    { name = "Saurabh Pradhan" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.32.3",
    "responses>=0.25.7",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/tanaos/synthex-python"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_file = "synthex/__version__.py"